--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>RAG Resume Chatbot | AI-Powered Resume Assistant</title>
+  <title>RAG Resume Chatbot  AI-Powered Resume Assistant</title>
   <meta name="description"
     content="An intelligent AI chatbot that answers questions about my resume using Retrieval-Augmented Generation (RAG) technology." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
